# my-work-

./: README.md
learn/code/: W.py  new.py  test.py
learn/text files/: copy.txt  pyproject.toml  requirements.txt
